2004-11-18  James Henstridge  <james@jamesh.id.au>

	* jhbuild/utils/httpcache.py (Cache.read_cache): only add items to
	the cache index if the actual file exists.

	* doc/custom.xsl: some XSLT customisations.

	* doc/jhbuild.css: some simple CSS to make the documentation look
	a bit nicer.

	* doc/jhbuild.xml: add some FAQs to the documentation.

2004-11-17  Marco Pesenti Gritti  <marco@gnome.org>

	* modulesets/freedesktop.modules:
	* modulesets/gnome-2.10.modules:

	More supports-non-srcdir-builds adjustements

2004-11-17  Richard Hult  <richard@imendio.com>

	* modulesets/gnome28.modules: Use gnome-2-8 branch for atk.

2004-11-16  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome28.modules: gnome-icon-theme branched.
	And so did gok, gnome-media and librsvg.

2004-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome28.modules: Add branch info for libbonobo,
	libbonoboui, libgtop, procman and bug-buddy.

2004-11-15  Marco Pesenti Gritti  <marco@gnome.org>

	* modulesets/gnome-2.10.modules:

	Add a bunch of supports-non-srcdir-builds. I reported bugs
	for all of them, so I'll remove it when they are fixed.

Thu Nov 11 17:30:56 2004  Jonathan Blandford  <jrb@redhat.com>

	* modulesets/freedesktop.modules: Make Xtst depend on RecordExt.

2004-11-10  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome28.modules (vino): use gnome-2-8 branch.
	(gnome-session): use the gnome-2-8 branch.

	* modulesets/gnome26.modules (libgpg-error, libgcrypt, gnutls):
	same here.

	* modulesets/gnome28.modules (libgpg-error, libgcrypt, gnutls):
	same here.

	* modulesets/gnome-2.10.modules (libgpg-error, libgcrypt, gnutls):
	update to latest versions.

	* jhbuild/modtypes/tarball.py (parse_tarball): add a hack to
	remove --enable-maintainer-mode, since a tarball might not include
	everything needed to compile in maintainer mode.

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* jhbuild/config.py: define $XDG_CONFIG_DIR
	