@@ -1,5 +1,10 @@
-tr.question > td > :first-child, tr.answer > td > :first-child {
+tr.question > td > :first-child, tr.answer > td > :first-child,
+tr.qandadiv > td > h4, tr.toc > td > :first-child {
   margin-top: 0em;
+}
+
+.variablelist > table td {
+  vertical-align: top;
 }
 
 .programlisting {
