@@ -1,5 +1,8 @@
 2004-11-18  James Henstridge  <james@jamesh.id.au>
 
+	* doc/jhbuild.xml: more FAQs, and some documentation on the config
+	file format.
+
 	* jhbuild/utils/httpcache.py (Cache.read_cache): only add items to
 	the cache index if the actual file exists.
 
